fixed issue with padding on mobile

--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
 }
 .content {
   flex: 1;
+  padding: 10px;
 }
 input {
   width: 100px;
